v0.15
	* ADD : Allow all platforms to connect to a gpsd backend
	* FIX : Set gpsd output to NMEA; allow to save log
	* FIX : Do not draw background if saved pixmap is null as a copy of a null pixmap seems to crash on Mac (fixes #2262)
	* FIX : Fixes MacOSX plugin dir (fixes #2253)
	* FIX : Handle latlong projection in SHP files (fixes #2183)
	* FIX : remove s60 extensions (fixes #2185)
	* FIX : allow non-uploadable nodes to be uploaded when they are part of of a created road (fixes #2175)
	* FIX : fixes building Merkaartor 0.14 with the -Werror=format-security CFLAG, which is used by default in Mandriva
	* FIX : remove Yahoo when NOUSEWEBKIT is enabled
v0.14
    * FIX : Optimize painter/style update
    * FIX : XML encode the changeset comments (fixes #2115)
    * ADD : Ability to create house numbers "Karlsruhe" style
	* FIX : Avoid infinite loop with imbricated relations
	* CHG : Remove api 0.5 option
	* ADD : Alternative way of drawing tracks
	* FIX : Don't fail importing lower-cased filenames
    * ADD : Select a relation member by contextual menu
    * CHG : Do not select a relation member when doing a "Center..."
    * ADD : Clicking on a relation member highlights it
	* ADD : Add a Features dock displaying the features in the current viewport
    * ADD : Add a case-sensitiveness option to the search + search by ID (closes #1509)
    * CHG : Remove support for osmarender (fixes #1966)
    * ADD : Allow multi-selection of layers; allow to show/hide or readonly several layers at once (closes #1798)
	* ADD : Also export routes in GPX
	* ADD : Paste features as a whole (closes #1807)
    * ADD : Spatial indexing of features for faster display with large downloaded areas.
    * ADD : Built-in list of epsg projections (from proj4)
    * CHG : Replaced "Commit..." command by "Force Upload". Allows to force update of existing features or to upload imported features (such as SHP, KML, ...)
    * FIX : User preferences thru OSM preferences system works again