@@ -1,4 +1,4 @@
-VERSION="0.15"
+VERSION="0.14"
 REVISION=""
 
 # NODEBUG=1             - no debug target
@@ -14,4 +14,3 @@ symbian:MOBILE=1
 # GEOIMAGE=1          - enable geotagged images (requires exiv2)
 # NVIDIA_HACK=1       - used to solve nvidia specific slowdown
 # GDAL=1    	      - enable GDAL (for, e.g., shapefile import; requires libgdal)
-# FORCE_CUSTOM_STYLE=1 - force custom style (recommended on Linux until the "expanding dock" is solved upstream)
